    pH      H3O+    OH-
    8.0      5      500
    7.5     16      160
    7.0     50       50
    6.5    160       16
    6.0    500        5
- in beaker with ph=6-8, calculate #particles proportional to liquid volume
- in beaker, create particles only in liquid volume
- address Kathy's problem with prototype on Java 1.4
- linear option for bar graph, with zoom in/out x10 around 0
- label H20 concentration as "about 55" in bar graph
- where to position value in bar graph when bars are too small to contain them?
- negative pH support?
- remove H2O value in beaker
- make molecules large enough in beaker so that numbers fit inside of them

DESIGN ISSUES:

HIGH PRIORITY:

MEDIUM PRIORITY:

LOW PRIORITY:

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
6/5/08 - create ProbeNode for pH probe
6/5/08 - add all strings to localization file & PHScaleStrings
******* version 0.00.04 (21953)
6/3/08 - create TestParticleViews: combine "beaker view" and "microscope view" into 1 prototype
6/3/08 - create TestBeakerView prototype for "beaker view" of H3O and OH concentrations in variable liquid volume
******* version 0.00.03 (21915)
6/2/08 - TestMicroscopeView: fix distribution of particles in circle, previous versions denser towards enter (missing sqrt)
6/2/08 - TestMicroscopeView: set default particle size to 4
6/2/08 - TestMicroscopeView: set default transparency to 0.5
******* version 0.00.02 (21898)
6/1/08 - TestMicroscopeView: add color controls
******* version 0.00.01 (21895)
5/31/08 - create TestMicroscopeView prototype for "microscope view" of H3O and OH concentrations
5/20/08 - set up simulation skeleton, check in to SVN

REJECTED:


===============================================================================
end of file