@@ -2,6 +2,10 @@
 
 package edu.colorado.phet.phscale;
 
+import java.text.MessageFormat;
+
+import javax.swing.plaf.basic.BasicHTML;
+
 
 /**
  * PHScaleStrings is the collection of localized strings used by this simulations.
@@ -10,13 +14,10 @@ package edu.colorado.phet.phscale;
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
 public class PHScaleStrings {
-    
+
     /* not intended for instantiation */
     private PHScaleStrings() {}
-    
-    public static final String CHECK_BOX_MOLECULE_COUNT = PHScaleResources.getString( "checkBox.moleculeCount" );
-    public static final String CHECK_BOX_H3O_OH_RATIO = PHScaleResources.getString( "checkBox.H3O_OH_ratio" );
-    
+
     public static final String CHOICE_MILK = PHScaleResources.getString( "choice.milk" );
     public static final String CHOICE_BATTERY_ACID = PHScaleResources.getString( "choice.batteryAcid" );
     public static final String CHOICE_GASTRIC_ACID = PHScaleResources.getString( "choice.gastricAcid" );
@@ -35,21 +36,33 @@ public class PHScaleStrings {
     public static final String CHOICE_AMMONIA = PHScaleResources.getString( "choice.ammonia" );
     public static final String CHOICE_BLEACH = PHScaleResources.getString( "choice.bleach" );
     public static final String CHOICE_LYE = PHScaleResources.getString( "choice.lye" );
-    public static final String CHOICE_WATER= PHScaleResources.getString( "choice.water" );
-    
-    public static final String LABEL_PH= PHScaleResources.getString( "label.pH" );
-    public static final String LABEL_ACID= PHScaleResources.getString( "label.acid" );
-    public static final String LABEL_BASE= PHScaleResources.getString( "label.base" );
-    public static final String LABEL_H2O= PHScaleResources.getString( "label.H2O" );
-    public static final String LABEL_H3O= PHScaleResources.getString( "label.H3O" );
-    public static final String LABEL_OH= PHScaleResources.getString( "label.OH" );
-    
+    public static final String CHOICE_WATER = PHScaleResources.getString( "choice.water" );
+
+    public static final String LABEL_PH = PHScaleResources.getString( "label.pH" );
+    public static final String LABEL_ACID = PHScaleResources.getString( "label.acid" );
+    public static final String LABEL_BASE = PHScaleResources.getString( "label.base" );
+    public static final String LABEL_H2O = PHScaleResources.getString( "label.H2O" );
+    public static final String LABEL_H3O = PHScaleResources.getString( "label.H3O" );
+    public static final String LABEL_OH = PHScaleResources.getString( "label.OH" );
+
+    public static final String CHECK_BOX_MOLECULE_COUNT = PHScaleResources.getString( "checkBox.moleculeCount" );
+    private static final String CHECK_BOX_H3O_OH_RATIO = PHScaleResources.getString( "checkBox.H3O_OH_ratio" );
+
     public static final String RADIO_BUTTON_CONCENTRATION = PHScaleResources.getString( "radioButton.concentration" );
     public static final String RADIO_BUTTON_NUMBER_OF_MOLES = PHScaleResources.getString( "radioButton.numberOfMoles" );
     public static final String RADIO_BUTTON_LOGARITHMIC_SCALE = PHScaleResources.getString( "radioButton.logarithmicScale" );
     public static final String RADIO_BUTTON_LINEAR_SCALE = PHScaleResources.getString( "radioButton.linearScale" );
-    
+
     public static final String UNITS_LITERS = PHScaleResources.getString( "units.liters" );
     public static final String UNITS_MOLES = PHScaleResources.getString( "units.moles" );
     public static final String UNITS_MOLES_PER_LITER = PHScaleResources.getString( "units.molesPerLiter" );
+
+    public static final String getBeakerViewRatioString() {
+        String s = CHECK_BOX_H3O_OH_RATIO;
+        if ( !BasicHTML.isHTMLString( CHECK_BOX_H3O_OH_RATIO ) ) {
+            s = "<html>" + s + "</html>";
+        }
+        Object[] args = { LABEL_H3O, LABEL_OH };
+        return MessageFormat.format( s, args );
+    }
 }
